--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-24}
+\date{2020-07-25}
 
 \begin{document}
 \maketitle
@@ -264,85 +264,16 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   abind_1.4.5              acepack_1.4.1           
-##   arm_1.11.1               askpass_1.1             
-##   assertthat_0.2.1         backports_1.1.8         
-##   base64enc_0.1-3          BH_1.72.0.3             
-##   bitops_1.0-6             bookdown_0.19.1         
-##   boot_1.3.25              broom_0.7.0.9000        
-##   callr_3.4.3              cellranger_1.1.0        
-##   checkmate_2.0.0          cli_2.0.2               
-##   clipr_0.7.0              cluster_2.1.0           
-##   coda_0.19.3              colorspace_1.4-1        
-##   compiler_4.0.2           crayon_1.3.4            
-##   curl_4.3                 data.table_1.12.8       
-##   DBI_1.1.0                dbplyr_1.4.3            
-##   desc_1.2.0               digest_0.6.25           
-##   dplyr_1.0.0              ellipsis_0.3.1          
-##   emoGG_0.0.2              evaluate_0.14           
-##   fansi_0.4.1              farver_2.0.3            
-##   forcats_0.5.0            foreign_0.8-80          
-##   Formula_1.2-3            fs_1.4.1                
-##   generics_0.0.2           ggplot2_3.3.2           
-##   glue_1.4.1               graphics_4.0.2          
-##   grDevices_4.0.2          grid_4.0.2              
-##   gridExtra_2.3            gsl_2.1.6               
-##   gtable_0.3.0             haven_2.3.1             
-##   highr_0.8                Hmisc_4.4-0             
-##   hms_0.5.3                htmlTable_2.0.0         
-##   htmltools_0.4.0          htmlwidgets_1.5.1       
-##   httr_1.4.1               isoband_0.2.2           
-##   janitor_2.0.1            jpeg_0.1-8.1            
-##   jsonlite_1.6.1           knitr_1.28              
-##   labeling_0.3             lattice_0.20-41         
-##   latticeExtra_0.6-29      lavaan_0.6.6            
-##   learnSampling_0.2        lifecycle_0.2.0         
-##   lme4_1.1.23              lubridate_1.7.8         
-##   magrittr_1.5             markdown_1.1            
-##   MASS_7.3.51.6            Matrix_1.2-18           
-##   matrixcalc_1.0.3         MBESS_4.7.0             
-##   methods_4.0.2            mgcv_1.8.31             
-##   mi_1.0                   mime_0.9                
-##   minqa_1.2.4              mnormt_2.0.1            
-##   modelr_0.1.8             munsell_0.5.0           
-##   mvtnorm_1.1.1            nlme_3.1-148            
-##   nloptr_1.2.2.2           nnet_7.3-14             
-##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
-##   openssl_1.4.1            packrat_0.5.0           
-##   parallel_4.0.2           pbapply_1.4.2           
-##   pbivnorm_0.6.0           pillar_1.4.6            
-##   pkgbuild_1.1.0           pkgconfig_2.0.3         
-##   pkgload_1.1.0            png_0.1-7               
-##   praise_1.0.0             predictionInterval_1.0.0
-##   prettyunits_1.1.1        processx_3.4.3          
-##   progress_1.2.2           proto_1.0.0             
-##   ps_1.3.3                 psych_1.9.12.31         
-##   purrr_0.3.4              R6_2.4.1                
-##   RColorBrewer_1.1-2       Rcpp_1.0.5              
-##   RcppEigen_0.3.3.7.0      RcppParallel_5.0.2      
-##   RCurl_1.98-1.2           readr_1.3.1             
-##   readxl_1.3.1             rematch_1.0.1           
-##   repr_1.1.0               reprex_0.3.0            
-##   rlang_0.4.7              rmarkdown_2.2           
-##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.3            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.2              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   base64enc_0.1.3 bookdown_0.19.1 compiler_4.0.2 
+##   digest_0.6.25   evaluate_0.14   glue_1.4.1     
+##   graphics_4.0.2  grDevices_4.0.2 highr_0.8      
+##   htmltools_0.4.0 jsonlite_1.6.1  knitr_1.28     
+##   magrittr_1.5    markdown_1.1    methods_4.0.2  
+##   mime_0.9        packrat_0.5.0   Rcpp_1.0.5     
+##   rlang_0.4.7     rmarkdown_2.2   rstudioapi_0.11
+##   stats_4.0.2     stringi_1.4.6   stringr_1.4.0  
+##   tinytex_0.23    tools_4.0.2     utils_4.0.2    
+##   xfun_0.14       yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -586,6 +517,23 @@ The tidyverse is now installed, so we need to activate it. We do that with the l
 \subsection{Activate tidyverse auto-complete for your script}\label{activate-tidyverse-auto-complete-for-your-script}}
 
 Select the library(tidyverse) text with your mouse/track-pad so that it is highlighted. Then click the Run button in the upper right of the Script panel. Doing this ``runs'' the selected text. After you click the Run button you should see text like the following the Console panel:
+
+\begin{verbatim}
+## -- Attaching packages ------------------- tidyverse 1.3.0 --
+\end{verbatim}
+
+\begin{verbatim}
+## v ggplot2 3.3.2     v purrr   0.3.4
+## v tibble  3.0.3     v dplyr   1.0.0
+## v tidyr   1.1.0     v stringr 1.4.0
+## v readr   1.3.1     v forcats 0.5.0
+\end{verbatim}
+
+\begin{verbatim}
+## -- Conflicts ---------------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()
+\end{verbatim}
 
 When you use library(tidyverse) to activate the tidyverse you activate the most commonly used subset of the tidyverse packages. In the output you see checkmarks beside names of the tidyverse packages you have activated.
 
@@ -4905,16 +4853,11 @@ Overall, the rules for interpreting standard deviation are similar to those for 
 \hypertarget{visualizing-populations}{%
 \section{Visualizing populations}\label{visualizing-populations}}
 
-Three different ways
+Populations are typically quite large in nature and it's often imposssible to pratically list all of the members of the population. Consequently, it helps to have ways to visual the entire population. In Figure \ref{fig:popvisual3} we present three ways of visualizing a population. In all three graphs (A, B, C) in this figure the x-axis represents heights in centimeter and the y-axis is used to indicate which values on the x-axis are more common. In Figure \ref{fig:popvisual3}A we use a large number of X's to indicate the members of the population. Because X's are also used in formulas to represent individual participants a strength of this graph is that it reminds you that it is a graph reflecting a large number of individuals. In Figure \ref{fig:popvisual3}B we present a standard histogram that illustrate the distribution of heights. In Figure \ref{fig:popvisual3}C we present a density curve that illustrate the distribution of heights. All three approaches are useful for illustrating that most people have heights around 170 cm.
 
-\begin{itemize}
-\item
-  histotext
-\item
-  histogram
-\item
-  density curve
-\end{itemize}
+\begin{figure}
+\includegraphics[width=25in,height=0.8\textheight]{ch_populations/images/popvisual} \caption{Three ways of visualizing a population distribution}\label{fig:popvisual3}
+\end{figure}
 
 \hypertarget{population-comparisons}{%
 \section{Population comparisons}\label{population-comparisons}}
@@ -5222,7 +5165,7 @@ Each row of many\_samples represents a sample of 10 people. Each column of many\
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-216-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-217-1.pdf}
 
 You can see the 5000 sample means, from the sample.mean column, plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantially from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size. Many of the sample means fall quite far from the population mean.
 
@@ -5417,9 +5360,7 @@ d  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}
       \label{eq:samplesmdch5}
 \end{equation}
 
-Unfortunately, Formula \eqref{eq:samplesmdch5} provides a biased estimate of the population standardized mean difference for small sample sizes. That is, on average, Formula \eqref{eq:samplesmdch5}, provides \(d\)-values that overestimate the size of the population standardize mean difference (\(\delta\)).
-
-Fortunately, we can obtain an unbiased estimate of the population-level standardized mean difference from sample data using Formula \eqref{eq:samplesmdunbiasedch5}.
+Unfortunately, Formula \eqref{eq:samplesmdch5} provides a biased estimate of the population standardized mean difference for small sample sizes. That is, on average, Formula \eqref{eq:samplesmdch5}, provides \(d\)-values that overestimate the size of the population standardize mean difference (\(\delta\)). Fortunately, we can obtain an unbiased estimate of the population-level standardized mean difference from sample data using Formula \eqref{eq:samplesmdunbiasedch5}.
 
 \begin{equation} 
 d_{unbiased}  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} \times [1 - \frac{3}{4(n_1 + n_2)-9}]
@@ -5712,6 +5653,8 @@ Cohen's \(d\) or SMD\strut
 \hypertarget{meta-analysis}{%
 \section{Meta-analysis}\label{meta-analysis}}
 
+It may seem odd that we used so many simulations to investigate the properties of statistics. Surely, researchers don't do that ``in the real world''. In fact, researchers that are aware of the enormous impact of sampling error know single studies have little informational value. They recognize that any single study has a high probability of being misleading. Consequently, these individuals survey the literature and find all the studies on a single topic (possibly thousands of studies). An average of the results of all of the thousands of studies can then be calculated and reported. This process is refered to as conducting a meta-analysis; and it perfectly corresponds to the process we used in the simulations. A meta-analysis finds ``the truth'' of what is happening at the population level by averaging over all of the studies on that topic.
+
 \hypertarget{key-points-1}{%
 \section{Key Points}\label{key-points-1}}
 
@@ -5891,7 +5834,7 @@ Use geom\_col() to put each boxoffice column value into a bar.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-238-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-239-1.pdf}
 
 Next, we want to put the boxoffice revenue about each bar so it eaiser to interpret. In R terms, we are putting a label above each bar. We want the contents for the labels to come from the boxoffice column. Therefore, we add the geom\_text() command below:
 
@@ -5909,7 +5852,7 @@ Next, we want to put the boxoffice revenue about each bar so it eaiser to interp
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-239-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-240-1.pdf}
 
 Unfortunately, when we position the text at the exact height of each column it overlaps with the column making it difficult to read. We fix this on the next page using nudge\_y.
 
@@ -5931,7 +5874,7 @@ We can nudge each label higher on the y-axis using the \emph{nudge\_y} command. 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-240-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-241-1.pdf}
 
 \hypertarget{graphing-efficiently}{%
 \section{Graphing efficiently}\label{graphing-efficiently}}
@@ -5953,7 +5896,7 @@ Examine the code below and compare it to the code above. Notice how in the geom\
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-241-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-242-1.pdf}
 
 \hypertarget{aesthetics}{%
 \section{Aesthetics}\label{aesthetics}}
@@ -5983,7 +5926,7 @@ You might want to influence the color of the bars in the graph such that the bar
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-242-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-243-1.pdf}
 
 \begin{figure}
 \includegraphics[width=0.7\linewidth]{ch_graphing/images/mapping_fill} \caption{Adding a fill column to the internal data}\label{fig:addfill}
@@ -6012,7 +5955,7 @@ Fortunately, if we simply put ``mapping = aes(label = tomatoes\_aud)'' within th
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-243-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-244-1.pdf}
 
 Notice that we have the same problem as before with the text being difficult to read because it overlaps with the bar. We add ``nudge\_y = 400'' to move the text higher than the boxoffice text/label. Don't forget the units used by nudge\_y are the units on the y-axis.
 
@@ -6031,7 +5974,7 @@ Notice that we have the same problem as before with the text being difficult to 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-244-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-245-1.pdf}
 
 \hypertarget{apa-style}{%
 \section{APA style}\label{apa-style}}
@@ -6055,7 +5998,7 @@ Use theme\_classic() to make the graph apear in APA style. We use theme\_classic
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-245-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-246-1.pdf}
 
 \hypertarget{axes}{%
 \section{Axes}\label{axes}}
@@ -6084,7 +6027,7 @@ We use the coord\_cartesian() command to adjust range of axes. In the code below
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-246-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-247-1.pdf}
 
 Note that if you had a continuous variable on the x-axis also (we do not in this example), you could set the range of both the x- and y-axes like this:
 
@@ -6119,7 +6062,7 @@ We use the scale\_y\_continuous() command to adjust the ticks on the y-axis. We 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-248-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-249-1.pdf}
 
 Note that if you had a continuous variable on the x-axis also (we do not in this example), you could set the ticks of the x-axis like the code below using scale\_x\_continuous:
 
@@ -6154,7 +6097,7 @@ We use the labs() command to set the labels forthe x- and y-axes:
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-250-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-251-1.pdf}
 
 \hypertarget{axis-values}{%
 \section{Axis values}\label{axis-values}}
@@ -6198,7 +6141,7 @@ Our data file contains a column with the long/full version of the movie names. B
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-251-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-252-1.pdf}
 
 \hypertarget{method-2-longer-label-columns}{%
 \subsubsection{Method 2: Longer label columns}\label{method-2-longer-label-columns}}
@@ -6226,7 +6169,7 @@ With our movie data we don't need to use \textbf{scale\_x\_discrete} because we 
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-252-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-253-1.pdf}
 
 \hypertarget{angle}{%
 \subsection{Angle}\label{angle}}
@@ -6256,7 +6199,7 @@ Use theme() to adjust angle of x-axis labels. We can use the theme command to ad
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-253-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-254-1.pdf}
 
 \hypertarget{alignment}{%
 \subsection{Alignment}\label{alignment}}
@@ -6285,7 +6228,7 @@ Use theme() and the hjust argument to adjust the alignment of the x-axis labels.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-254-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-255-1.pdf}
 
 \hypertarget{order}{%
 \subsection{Order}\label{order}}
@@ -6325,7 +6268,7 @@ We can make the movie bars go left to right from lowest to highest box office re
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-256-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-257-1.pdf}
 
 \hypertarget{decreasing-order}{%
 \subsubsection{Decreasing order}\label{decreasing-order}}
@@ -6361,7 +6304,7 @@ We can make the movie bars go left to right from highest to lowest box office re
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-258-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-259-1.pdf}
 
 \hypertarget{custom-order}{%
 \subsubsection{Custom order}\label{custom-order}}
